# gstreamer-pravega

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md
apps/: Cargo.toml
deepstream/: README.md  build-and-test.sh  deepstream-dev-pod.Dockerfile  docker-build.sh  docker-run.sh  pravega-deepstream.Dockerfile  pravega-dev.Dockerfile
deepstream/ca-certificates/: README.txt
deepstream/configs/: config1.txt  test5_config_file_src_infer_1.txt  test5_dec_infer-resnet_tracker_sgie_tiled_display_int8_1.txt
deepstream/kafka-docker/: README.md  docker-compose.yml  kafka-client-test.sh  kafka-console-consumer.sh
deepstream/pravega_protocol_adapter/: Cargo.toml  Makefile  Makefile.test  README.md  test_pravega_proto_async.cpp  test_pravega_proto_sync.cpp  test_pravega_protocol_adapter.cpp
deepstream/pravega_protocol_adapter/src/: lib.rs
deepstream/python_apps/: camera_to_pravega.py
deepstream/python_apps/deepstream-pravega-demos/: dstest3_pgie_config.txt  msgconv_config.txt  pgie_config.txt  pravega-to-hack-to-pravega.py  pravega-to-object-detection-to-pravega.py  pravega-to-object-detection-to-pravega2.py  pravega-to-pravega.py  rtsp-camera-to-object-detection-to-pravega.py  rtsp-camera-to-object-detection-to-screen.py
deepstream/python_apps/deepstream-test1/: deepstream_test_1.py
deepstream/python_apps/deepstream-test4/: deepstream_test_4.py  dstest4_pgie_config.txt
deepstream/scripts/: build-and-test.sh  build-local.sh  camera-encode-then-decode-to-screen1.sh  camera-encode-then-decode-to-screen2.sh  camera-to-pravega-blur.sh  camera-to-pravega-no-blur.sh  camera-to-pravega-to-screen1.sh  camera-to-pravega-to-screen2.sh  camera-to-pravega.sh  camera-to-screen1.sh  camera-to-screen2.sh  deepstream-app1.sh  display-metadata-stream.sh  pravega-to-screen.sh  remote-build.sh  remote-camera-to-pravega-to-local-screen.sh  rtsp-camera-to-file.sh  rtsp-camera-to-screen-nvidia.sh  rtsp-camera-to-screen.sh  setup_nvds_logger.sh  videotestsrc-to-pravega.sh
docker/: Dockerfile-dev  Dockerfile-dev-dependencies  Dockerfile-dev-downloaded  Dockerfile-dev-with-source  Dockerfile-prod  Dockerfile-prod-base  Dockerfile-prod-dbg  README.md  build-latest.sh  build-release.sh  dev.Dockerfile  devpod-entrypoint.sh  docker-run.sh  entrypoint.sh  install-prod-dependencies  pravega-dev.Dockerfile  pravega.Dockerfile  prod.Dockerfile  push-latest.sh  push-release.sh  sshd_config
docker/build-gstreamer/: compile  download  install-dependencies  install-dependencies-ubuntu-20  install-prod-dependencies
docker/docker/build-gstreamer/: compile  download  install-dependencies
documentation/src/docs/: failure-recovery.md  network-video-recorder-k8s.md  rtsp.md  (+1 more)
gst-plugin-pravega/: Cargo.toml  build.rs
gst-plugin-pravega/src/: counting_reader.rs  counting_writer.rs  lib.rs  numeric.rs  seekable_byte_stream_writer.rs  seekable_take.rs  utils.rs
gst-plugin-pravega/src/fragmp4pay/: imp.rs  mod.rs
gst-plugin-pravega/src/pravegasink/: imp.rs  mod.rs
gst-plugin-pravega/src/pravegasrc/: imp.rs  mod.rs
gst-plugin-pravega/src/pravegatc/: imp.rs  mod.rs
gst-plugin-pravega/src/rtspsrc-simulator/: imp.rs  mod.rs
gst-plugin-pravega/src/rtspsrcsimulator/: imp.rs  mod.rs
gst-plugin-pravega/src/timestampcvt/: imp.rs  mod.rs
gst-plugin-pravega/tests/: timestampcvt.rs
integration-test/: Cargo.toml  build.rs
integration-test/src/: byte_stream_tests.rs  camera_recorder_tests.rs  extreme_tests.rs  failure_recovery_tests.rs  file_import_tests.rs  gst_plugin_pravega_tests.rs  hls_tests.rs  lib.rs  pravega_service.rs  pravegasrc_seek_tests.rs  pravegasrc_tests.rs  rtsp_camera_simulator.rs  rtsp_tests.rs  truncation_tests.rs  utils.rs
jupyter/: deepstream-jupyter.Dockerfile  docker-build.sh  start_jupyter_docker.sh
jupyter/notebooks/: analyze_logged_timestamps.ipynb  analyze_metrics.ipynb  analyze_rtsp.ipynb  convert_rtsp_timestamps.ipynb  longevity_test.ipynb
k8s/: deepstream-dev-pod.sh  gstreamer-interactive.yaml  longevity-test.sh  rtsp-camera-simulator.sh  rtsp-camera-to-pravega-sample.yaml  rtsp-camera-to-pravega.sh  video-server.sh
pravega-docker/: docker-compose.yml  down.sh  up.sh
pravega-video/: Cargo.toml
pravega-video-server/: Cargo.toml
pravega-video-server/resources/templates/: player.html
pravega-video-server/src/: main.rs
pravega-video-server/static/: gap-5s.ts  hls-js.js  master.m3u8  shaka.html  shaka.js  video-js.html  video-js.js
pravega-video-server/templates/: player.html
pravega-video/src/: event_serde.rs  index.rs  lib.rs  timestamp.rs  tracing.rs  utils.rs
pravega-webrtc-server/: Cargo.toml
pravega-webrtc-server/src/: main.rs
python_apps/: build-and-run-python-app.sh  pravega-to-pravega.py  pravega-to-screen.py  pravega-video-processor.py  roundtrip_test.py  rtsp-camera-to-mp4.py  rtsp-camera-to-pravega-probe.py  rtsp-camera-to-pravega.py  rtsp-camera-to-screen-manual.py  rtsp-camera-to-screen.py  video_file_to_pravega.py
scripts/: analyze-file-mp4.sh  analyze-pravega-stream-mp4.sh  audio-to-file-ts.sh  audio-to-file.sh  audio-to-pravega.sh  audio-to-speaker.sh  avtestsrc-to-file.sh  avtestsrc-to-pravega-1x2.sh  avtestsrc-to-pravega-hls.sh  avtestsrc-to-pravega-split-no-ts.sh  avtestsrc-to-pravega-split.sh  avtestsrc-to-pravega.sh  benchmark-config.sh  benchmark-create-ts-file.sh  benchmark-e2e-latency-camera.sh  benchmark-e2e-latency-historical.sh  benchmark-e2e-latency-tail.sh  benchmark-pravegasink.sh  benchmark-pravegasrc.sh  benchmark-results.ods  camera-encode-then-decode.sh  camera-to-file-and-screen.sh  camera-to-file.sh  camera-to-pravega-and-screen-then-decode.sh  camera-to-pravega-and-screen.sh  camera-to-pravega.sh  camera-to-screen-warptv.sh  camera-to-screen-xray.sh  camera-to-screen.sh  devenv.sh  dot-to-png.sh  dot-viewer.desktop  dot-viewer.sh  env-jetson.sh  file-to-file.sh  file-to-file2.sh  file-to-playsink.sh  file-to-screen-and-speaker-split.sh  file-to-screen-and-speaker.sh  file-to-screen-h264.sh  (+105 more)
tls/: README.md  ca.crt  ca.key  ca.srl  create-dev-certs.sh  localhost.crt  localhost.csr  localhost.key
(+37 files in other folders)
