[patch."https://github.com/pravega/pravega-client-rust"]
pravega-client = { git = "https://github.com/pravega//pravega-client-rust.git", rev = "800232b49893186203ebf36bdc430a3a7540d30e" }
pravega-client-shared = { git = "https://github.com//pravega/pravega-client-rust.git", package = "pravega-client-shared", rev = "800232b49893186203ebf36bdc430a3a7540d30e" }
pravega-client-config = { git = "https://github.com//pravega/pravega-client-rust.git", package = "pravega-client-config", rev = "800232b49893186203ebf36bdc430a3a7540d30e" }

[workspace]
members = [
    "pravega-video",
    "deepstream/pravega_protocol_adapter",
    "gst-plugin-pravega",
    "pravega-video-server",
    "apps"
]
