#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "gstreamer-pravega-apps"
version = "0.1.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "Pravega utilities and samples that use GStreamer"
edition = "2018"

[dependencies]
anyhow = "1"
byte-slice-cast = "0.3"
chrono = "0.4"
clap = "3.0.0-beta.2"
derive_more = "0.99.5"
env_logger = "0.7"
gdk = { git = "https://github.com/gtk-rs/gtk-rs" }
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-rtsp = { package = "gstreamer-rtsp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-rtsp-server = { package = "gstreamer-rtsp-server", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gtk = { git = "https://github.com/gtk-rs/gtk-rs" }
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "c3b92686c2890d80909e7b9ad0c79acd02717b81" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "c3b92686c2890d80909e7b9ad0c79acd02717b81" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "c3b92686c2890d80909e7b9ad0c79acd02717b81" }
pravega-video = { path = "../pravega-video" }
log = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1.1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"
url = "2.1"
uuid = "0.8"

[features]
default = ["x11"]
x11 = []
