#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "gstreamer-pravega-apps"
version = "0.1.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "Pravega utilities and samples that use GStreamer"
edition = "2021"

[dependencies]
anyhow = "1"
byte-slice-cast = "0.3"
chrono = "0.4"
clap = "3.0.0"
derive_more = "0.99.5"
env_logger = "0.7"
glib = "0.16"
gdk = "0.16"
gtk = "0.16"
gst = { package = "gstreamer", version = "0.19"}
gst-app = { package = "gstreamer-app", version = "0.19"  }
gst-audio = { package = "gstreamer-audio", version = "0.19"  }
gst-video = { package = "gstreamer-video", version = "0.19"  }
gst-rtsp = { package = "gstreamer-rtsp", version = "0.19"  }
gst-rtsp-server = { package = "gstreamer-rtsp-server", version = "0.19"  }
gst-sdp = { package = "gstreamer-sdp", version = "0.19" }
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-video = { path = "../pravega-video" }
log = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1.1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"
url = "2.1"
uuid = "0.8"

[features]
default = ["x11"]
x11 = []
