#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "gst-plugin-pravega"
version = "0.7.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "GStreamer Plugin for Pravega"
edition = "2018"

[dependencies]
chrono = "0.4"
enumflags2 = { version = "0.6", features = ["serde"]}
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "1"
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-video = { path = "../pravega-video" }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[lib]
name = "gstpravega"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

[build-dependencies]
gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }

[package.metadata.deb]
maintainer = "Claudio Fahey <claudio.fahey@dell.com>"
copyright = "Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved."
license-file = ["LICENSE", "4"]
extended-description = """\
GStreamer Plugin for Pravega"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libgstpravega.so", "usr/lib/aarch64-linux-gnu/gstreamer-1.0/", "644"],
]
