#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "gstreamer-pravega-integration-test"
version = "0.7.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "The integration test for gstreamer-pravega."
edition = "2018"

[dependencies]
chrono = "0.4"
derive-new = "0.5"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-plugin-pravega = { path = "../gst-plugin-pravega" }
java-properties = "1.2"
lazy_static = "1.4"
pravega-client = { path = "../pravega-client-rust" }
pravega-client-config = { path = "../pravega-client-rust/config"}
pravega-client-shared = { path = "../pravega-client-rust/shared"}
pravega-video = { path = "../pravega-video" }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"

[build-dependencies]
flate2 = "1.0"
pkg-config = "0.3"
tar = "0.4"
tracing = "0.1"
reqwest = {version = "0.11", features = ["blocking"]}
