#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "integration-test"
version = "0.7.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "The integration test for gstreamer-pravega."
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
ctor = "0.1.20"
derive_builder = "0.10.2"
derive-new = "0.5"
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-plugin-pravega = { path = "../gst-plugin-pravega" }
gst-rtsp = { package = "gstreamer-rtsp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-rtsp-server = { package = "gstreamer-rtsp-server", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
java-properties = "1.2"
lazy_static = "1.4"
once_cell = "1.7.2"
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "9ed43aaefabfb2750a2361419a7232200e6ed4a0" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "9ed43aaefabfb2750a2361419a7232200e6ed4a0" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "9ed43aaefabfb2750a2361419a7232200e6ed4a0" }
pravega-video = { path = "../pravega-video" }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"
url = "2.1"
uuid = "0.8"

[dev-dependencies]
rstest = "0.8.0"

[build-dependencies]
flate2 = "1.0"
pkg-config = "0.3"
tar = "0.4"
tracing = "0.1"
reqwest = {version = "0.11", features = ["blocking"]}
