#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "pravega-video-server"
version = "0.1.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "Serve HTTP Live Streaming (HLS) from a Pravega video stream"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1.0", features = ["derive", "suggestions", "color", "env" ] }
futures = "0.3"
futures-util = "0.3.18"
handlebars = "3"
hyper = "0.14"
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-controller-client = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-controller-client", rev = "17deb48bbdb9b0180e93942d5e0e9218b553f77b" }
pravega-video = { path = "../pravega-video" }
serde = "1"
serde_derive = "1"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"
tokio = { version = "1.1", features = ["full"] }
warp = { version = "0.3", features = ["compression"] }
