#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "pravega-video"
version = "0.1.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "A library for handling video with Pravega"
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
enumflags2 = { version = "0.6", features = ["serde"]}
env_logger = "0.7"
futures = "0.3"
once_cell = "1"
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "8954c04f4c5530374128f905bf49dda5d7bcef0e" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "8954c04f4c5530374128f905bf49dda5d7bcef0e" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "8954c04f4c5530374128f905bf49dda5d7bcef0e" }
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
