[package]
name = "pravega-webrtc-server"
version = "0.1.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-std = "1"
async-tungstenite = { version = "0.12.0", features = ["async-std-runtime", "async-native-tls"] }
env_logger = "0.8"
futures = "0.3"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
gst-plugin-pravega = { path = "../gst-plugin-pravega" }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
log = "0.4"
rand = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = { version = "0.3", default-features = false }
