#
# Copyright (c) Dell Inc., or its subsidiaries. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
[package]
name = "pravega_protocol_adapter"
version = "0.1.0"
authors = ["Claudio Fahey <claudio.fahey@dell.com>"]
repository = "https://github.com/pravega/gstreamer-pravega"
license = "Apache-2.0"
description = "Pravega Protocol Adapter for NVIDIA DeepStream"
edition = "2018"

[dependencies]
anyhow = "1"
pravega-client = { git = "https://github.com/pravega/pravega-client-rust", rev = "c3b92686c2890d80909e7b9ad0c79acd02717b81" }
pravega-client-config = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-config", rev = "c3b92686c2890d80909e7b9ad0c79acd02717b81" }
pravega-client-shared = { git = "https://github.com/pravega/pravega-client-rust", package = "pravega-client-shared", rev = "c3b92686c2890d80909e7b9ad0c79acd02717b81" }
pravega-video = { path = "../../pravega-video" }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.1", features = ["full"] }
configparser = "2.0.1"

[lib]
name = "nvds_pravega_proto"
crate-type = ["cdylib"]
path = "src/lib.rs"
